<resources>
    <string name="app_name">App name</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_my_cities">My Cities</string>
    <string name="search_hint">Search Cities</string>
    <string name="recent">Recent</string>
    <string name="star_icon">Star icon</string>
    <string name="weather_icon">Weather icon</string>
    <string name="icon">Icon</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="distance">Distance: %1$d km</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="min">min</string>
    <string name="min_max" translatable="false">MIN/MAX</string>
    <string name="max">max</string>
    <string name="wind">wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="accuracy">Accuracy</string>
    <string name="today">Today</string>
    <string name="next_seven_days">Next 7 days</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="monday_abr">MON</string>
    <string name="tuesday_abr">TUE</string>
    <string name="wednesday_abr">WED</string>
    <string name="thursday_abr">THU</string>
    <string name="friday_abr">FRI</string>
    <string name="saturday_abr">SAT</string>
    <string name="sunday_abr">SUN</string>

    <string name="view_more">View more</string>

    <string name="language">Language</string>
    <string name="city">City</string>
    <string name="choose_unit_type">Choose type of unit</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="about">About</string>
    <string name="more_info">More info</string>
    <string name="clear_cities_list">Clear my cities list</string>
    <string name="clear_recent_list">Clear recent search list</string>

    <string name="class_2023">Class 2023</string>
    <string name="sofascore_academy">Sofascore Academy</string>

    <string name="cool_weather_app">Super Cool Weather App</string>
    <string name="metaweather">metaweather</string>
    <string name="developer">Developer</string>

    <string name="clear_recent_list_description">If you clear your recent search list, your home screen will be empty.</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>

    <string name="cleared_recent_search_list">Recent search list is clear.</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="theme">Theme</string>

    <string name="croatian">Croatian</string>
    <string name="english">English</string>

    <string name="choose_language">Choose language</string>
    <string name="choose_theme">Choose theme</string>
    <string name="settings">Settings</string>

    <string name="popover_title">Popover Title</string>
    <string name="popover_description">This is popover placeholder text, lorem ipsum dolor sit amet.</string>

    <string name="about_short_text">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>

</resources>