<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.homework_5.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search"
        android:background="@color/color_primary"/>

    <fragment
        android:id="@+id/navigation_my_cities"
        android:name="com.example.homework_5.ui.my_cities.MyCitiesFragment"
        android:label="@string/title_my_cities"
        tools:layout="@layout/fragment_my_cities" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.homework_5.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>