<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@drawable/bg_round_edges_12_dp"
    android:backgroundTint="@color/surface_surface2">

    <TextView
        style="@style/AssistiveNLv2Left"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:text="@string/choose_unit_type"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_metric"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/metric"
            android:checked="true"
            android:buttonTint="@color/color_secondary"/>

        <RadioButton
            android:id="@+id/radio_imperial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/imperial"
            android:buttonTint="@color/color_secondary"/>
    </LinearLayout>
</LinearLayout>
